--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,7 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
-httpx==0.25.2
+httpx>=0.26,<0.29
 openai==1.3.7
 anthropic==0.7.7
 google-generativeai==0.3.2
@@ -11,3 +11,6 @@ websockets==12.0
 python-multipart==0.0.6
 textblob==0.17.1
 language-tool-python==2.7.1
+google-auth==2.40.3
+supabase==2.16.0
+asyncpg==0.29.0
