Fix critical errors: remove OAuth2 and window object issues

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
-    "name": "AI Magic - Prompt Enhancer",
+    "name": "PromptGrammarly",
     "version": "1.0",
-    "description": "Enhance your prompts with AI Magic.",
+    "description": "improve your prompts with promptgrammarly",
     "permissions": [
         "identity",
         "storage",
@@ -33,7 +33,7 @@
         }
     ],
     "background": {
-        "service_worker": "background.js"
+        "service_worker": "background-simple.js"
     },
     "action": {
         "default_popup": "popup.html",
@@ -50,12 +50,4 @@
         "48": "icons/icon48.png",
         "128": "icons/icon128.png"
     },
-    "oauth2": {
-        "client_id": "20427090028-asq8b7s849pq95li1hkmc7vrq1qeertg.apps.googleusercontent.com",
-        "scopes": [
-            "https://www.googleapis.com/auth/userinfo.email",
-            "https://www.googleapis.com/auth/userinfo.profile",
-            "openid"
-        ]
-    }
 }
