Rebrand from AI Magic Pro to PromptGrammerly
- Update all payment system references to use PromptGrammerly
- Change service names in API responses and health checks
- Update Docker container names and service names
- Update Chrome extension tooltips and comments
- Maintain consistent branding across all components

Files updated:
- backend/app/api/v1/endpoints/payment.py
- backend/app/api/enhance.py
- backend/app/core/config.py
- backend/app/models/request.py
- backend/app/models/response.py
- deployment/docker-compose.yml
- chrome-extension/magical-enhancer.js

--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3.8'
 
 services:
-  # AI Magic Prompt Enhancer Backend
-  ai-magic-backend:
+  # PromptGrammerly Prompt Enhancer Backend
+  promptgrammerly-backend:
     build:
       context: ../backend
       dockerfile: Dockerfile
-    container_name: ai-magic-backend
+    container_name: promptgrammerly-backend
     ports:
       - "8000:8000"
     environment:
