--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  # PromptGrammerly Prompt Enhancer Backend
+  # PromptGrammerly Backend
   promptgrammerly-backend:
     build:
       context: ../backend
