--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,6 +24,7 @@ redis==5.0.1
 # Authentication and Security
 google-auth==2.40.3
 PyJWT==2.8.0
+email-validator==2.1.0
 
 # Payment Processing
 razorpay==1.4.1
