Fix: Add config.js to content scripts in manifest
- Added config.js to content_scripts in manifest.json
- This ensures window.CONFIG is available in magical-enhancer.js
- Extension will now use Railway production URL instead of localhost
- Fixes issue where extension only worked with local backend running

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -38,7 +38,7 @@
                 "https://poe.com/*",
                 "https://www.meta.ai/?utm_source=ai_meta_site&utm_medium=web&utm_content=AI_nav&utm_campaign=06112025_moment"
             ],
-            "js": ["magical-enhancer.js"],
+            "js": ["config.js", "magical-enhancer.js"],
             "run_at": "document_end"
         }
     ],
