Fix manifest.json and restore OAuth - authentication is required
- Fixed broken manifest.json structure
- Restored OAuth2 configuration for user authentication
- Authentication is essential for user tracking and prompt limits
- OAuth errors need to be fixed, not disabled

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -60,4 +60,12 @@
         "48": "icons/icon48.png",
         "128": "icons/icon128.png"
     },
+    "oauth2": {
+        "client_id": "20427090028-asq8b7s849pq95li1hkmc7vrq1qeertg.apps.googleusercontent.com",
+        "scopes": [
+            "https://www.googleapis.com/auth/userinfo.email",
+            "https://www.googleapis.com/auth/userinfo.profile",
+            "openid"
+        ]
+    }
 }
