--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "PromptGrammerly",
     "version": "1.0.3", 
-    "description": "your personal Promptengineer",
+    "description": "your personal PromptEngineer",
     "permissions": [
         "identity",
         "storage",
